[tool.poetry]
name = "dataflows-ckan"
version = "0.3.5"
description = "CKAN integration for Dataflows."
authors = ["Paul Walsh <paul@walsh.co.il>", "Adam Kariv <adam.kariv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
ckan-datapackage-tools = "^0.1.0"
tableschema-ckan-datastore = "^1.1.1"
datapackage = "^1.15.2"
dataflows = "^0.3.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
ipython = "^7.28.0"
ipdb = "^0.13.9"
pytest = "^6.2.5"
mock = "^4.0.3"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
skip-string-normalization = 1
line-length = 99

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = "tests"
